css/shanti-search.css
/*----------------------------------------------*/
/*--- START / Sliding Panel ---*/
/*----------------------------------------------*/

/*--- clear default extruder styles -----*/
.extruder, .extruder.right,.extruder .extruder-content, .extruder.right .flap .flapLabel, .extruder .text, .extruder .voice.hover, .extruder .voice.sel, .extruder .settingsBtn, .extruder .optionsPanel,.optionsPanel .panelVoice a:hover{ overflow:visible; background-image:none; background:transparent;}
.extruder.open .extruder-content, .extruder.right.open .extruder-content,.extruder.right .flap,.extruder .voice,.extruder.right .text,.optionsPanel .panelVoice a{box-shadow:none; text-transform:none;}
.extruder.right .extruder-content,.panel-default .panel-heading,.extruder.right .panel-heading,.extruder.right .panel-group,.extruder.right .panel-group .panel,.extruder.right .panel-default>.panel-heading{ border:none;}

/*--------------------------*/
/*--- panel ---*/
.extruder.right{ padding:0; border:none; background:transparent !important;box-shadow:none;}
.ext_wrapper{ height:auto; padding:0; }
.extruder.right .extruder-content{ /*overflow:visible !important;*/ background:transparent !important; border:none; padding:0;width:100%;box-shadow:0 0 5px hsla(0, 0.0000%, 60.0000%, 0.7500); border-collapse: separate; /* fix for ie9 shadow */}
.extruder.right.isOpened .extruder-content{ border-right-width:12px; background:transparent !important;}
.extruder .text{ border:none; padding:0; text-shadow:none; width:277px; min-width:277px !important; /*---- default panel container width is set ----*/}

.extruder.right .flap,
.extruder.right.isOpened .flap,
.extruder.right .flap .flapLabel,
.extruder.right .flap.on-flap .flapLabel,
.extruder.right.isOpened .flap.on-flap .flapLabel,
.extruder.right .flap>span,
.extruder.right .flap.on-flap>span,
.extruder.right .flap.on-hover>span,
.extruder.right .flap.on-hover.on-flap>span{ width:0; padding:0; border:none; background:transparent;}

object.flip_label{ display:none;}
.extruder.right.open-collections{ margin-top:280px;}

/*--- handle ---*/
.text.ui-resizable,
.isOpened .text.ui-resizable{ position:static;} /*--- NOTE this is super important to keep the right edge pinned while expanding width */
.ui-resizable-handle.ui-resizable-w{ cursor:col-resize; position:absolute; left:1px; top:10px; /* top:85%; */ z-index:900; width:6px; height:97%;}
.ui-resizable-handle.ui-resizable-w:active{ background:#fafafa;}

/*--- panel ---*/
#search-flyout { top:0;}
#search-flyout.extruder.right{ margin-top:7px; position:absolute; z-index:10100;}
#search-flyout .ext_wrapper{ height:auto; padding:0; }
#search-flyout.extruder.right .extruder-content{ background:transparent !important; overflow:visible !important; border:7px solid #fff; border-right-width:0px;  padding:0;	width:100%;box-shadow:-4px 4px 5px hsla(0, 0.0000%, 60.0000%, 0.2000); border-collapse: separate;}
#search-flyout.extruder.right.isOpened .extruder-content{ border-right-width:12px;}
#search-flyout.extruder .text{ border:none; padding:0; text-shadow:none; background:#f8f8f8; color:#333;}

/*--- big search button inline styles are loaded via main.js with icon markup  */
#search-flyout.extruder.right .flap{ background:#fff; height:53px; width:45px; padding: 7px 0 7px 7px; margin:0 0 0 -7px; cursor:pointer; display:block; border-top-left-radius:44px;border-bottom-left-radius:44px; box-shadow: -4px 0 4px rgba(0,0,0, 0.1250); border-collapse: separate;}
#search-flyout.extruder.right .flap.on-flap{ border-collapse:separate;}
#search-flyout.extruder.right .flap .flapLabel,
#search-flyout.extruder.right .flap.on-flap .flapLabel{ background:#505050; height:39px; width:37px !important; padding:17px 38px 17px 0; margin:0; display:block; border-top-left-radius:20px; border-bottom-left-radius:20px;border-collapse: separate;}
#search-flyout.extruder.right.isOpened .flap{ width:48px; margin:0 0 0 -8px;}
#search-flyout.extruder.right.isOpened .flap.on-flap .flapLabel{ width:30px !important;}
/*----- css for the flap is inserted inline, see js/main ---*/
#search-flyout.extruder.right .flap>span,
#search-flyout.extruder.right .flap.on-flap>span{ color:#ddd;-webkit-transition: all .3s ease-out; transition: all .3s ease-out;}
#search-flyout.extruder.right .flap.on-hover>span,
#search-flyout.extruder.right .flap.on-hover.on-flap>span{ color:#fff;background:#444;-webkit-transition: all .3s ease-out;transition: all .3s ease-out;}

#search-flyout.extruder.right .flap>span .icon{ font-size: 2.38rem;position: absolute;left:16px;top:16px;z-index: 10;}
#search-flyout.extruder.right.isOpened .flap.on-flap>span .icon{ font-size: 3.12rem;left:13px;top:11px;}
#search-flyout.extruder.right.isOpened .flap.on-flap>span .icon.shanticon-search::before{ content:'\e610';}

#menu-main.extruder.right{ margin-top:39px; color:#888 !important;}
#menu-main.extruder.right .extruder-content{ background:transparent !important; color:#888 !important; overflow:visible !important; box-shadow:none !important; }
#menu-main.extruder.right.isOpened .extruder-content{ color:#888 !important;}
#menu-main.extruder .text{ color:#888 !important;}

#menu-collections.extruder.right{ margin-top:39px; color:#888 !important;}
#menu-collections.extruder.right .extruder-content{ color:#888 !important; background:transparent !important; overflow:visible !important; box-shadow:none !important; }
#menu-collections.extruder.right.isOpened .extruder-content{ color:#fff !important;}
#menu-collections.extruder .text{ color:#888 !important;}
/*----------------------------------------------*/
/*--- END / Sliding Panel ---------------------*/






/*--- START / Search Panel / Input & View ----*/
/*----------------------------------------------*/
.input-section{ padding:0;border: 1px solid #e0e0e0;display:block;width:100%;}
.input-section .input-group input.form-control:first-child{ border-bottom-right-radius: 25px;border-top-right-radius: 25px; background-clip: padding-box;}
/* ... */

